--- a/Frontend/src/components/layout/style.css
+++ b/Frontend/src/components/layout/style.css
@@ -17,3 +17,30 @@
 .ant-layout-content {
     padding: 20px 50px;
 }
+
+.wish-list-btn {
+    font-size: 30px;
+    color: aliceblue;
+}
+
+.wish-list-btn:hover {
+    color: rgb(58, 163, 255);
+}
+
+.wish-list-content {
+    max-height: 500px;
+    max-width: 375px;
+    overflow-y: auto;
+}
+
+.wish-list-content-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+img.thumbnail {
+    width: 100%;
+    height: 100%;
+}
