--- a/Frontend/src/App.less
+++ b/Frontend/src/App.less
@@ -1,4 +1,5 @@
-@import '~antd/dist/antd.css';
+// @import '~antd/dist/antd.css';
+@import '~antd/dist/antd.less';
 .container {
     background-color: white;
     border-radius: 8px;
@@ -6,13 +7,11 @@
     padding: 25px;
 }
 
-
 /* width */
 
 ::-webkit-scrollbar {
     width: 5px;
 }
-
 
 /* Track */
 
@@ -21,14 +20,12 @@
     /* border-radius: 10px; */
 }
 
-
 /* Handle */
 
 ::-webkit-scrollbar-thumb {
     background: #80828187;
     /* border-radius: 10px; */
 }
-
 
 /* Handle on hover */
 
