--- a/Frontend/src/components/login/style.css
+++ b/Frontend/src/components/login/style.css
@@ -23,6 +23,13 @@
     overflow: hidden;
 }
 
+@media screen and (max-width: 450px) {
+    /* For mobile phones: */
+    .login {
+        margin: 0;
+    }
+}
+
 .login img {
     width: 100%;
     height: auto;
