--- a/Frontend/src/components/register/style.css
+++ b/Frontend/src/components/register/style.css
@@ -5,6 +5,13 @@
     overflow: hidden;
 }
 
+@media screen and (max-width: 450px) {
+    /* For mobile phones: */
+    .register-container {
+        margin: 0;
+    }
+}
+
 h1.title {
     text-align: center;
     margin-bottom: 20px;
