--- a/Frontend/src/components/layout/style.css
+++ b/Frontend/src/components/layout/style.css
@@ -21,7 +21,7 @@
 @media screen and (max-width: 400px) {
     /* For mobile phones: */
     .ant-layout-content {
-        padding: 20px 20px;
+        padding: 20px;
     }
 }
 
