--- a/Frontend/src/components/user/edit/style.css
+++ b/Frontend/src/components/user/edit/style.css
@@ -56,6 +56,12 @@
     bottom: 20px;
 }
 
+.icon-edit-upload svg {
+    -webkit-filter: drop-shadow(0px -2px 2px white);
+    filter: drop-shadow(0px -2px 2px white);
+    /* Similar syntax to box-shadow */
+}
+
 .ant-image-preview-operations-operation:not(:first-child) {
     display: none;
 }
