--- a/Frontend/src/components/user/edit/style.css
+++ b/Frontend/src/components/user/edit/style.css
@@ -41,6 +41,13 @@
     overflow: hidden;
 }
 
+.identify-uploader .ant-upload.ant-upload-select.ant-upload-select-picture-card {
+    width: 100%;
+    height: 150px;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
 .avatar-uploader .ant-upload.ant-upload-select.ant-upload-select-picture-card {
     width: 100%;
     height: 100%;
