--- a/Frontend/src/components/home/style.css
+++ b/Frontend/src/components/home/style.css
@@ -28,3 +28,16 @@
     padding: 0px 10px;
     width: 80%;
 }
+
+.danhngon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    height: 200px;
+    padding: 20px 55px;
+    background: whitesmoke;
+    font-family: monospace;
+    font-size: medium;
+}
